functionality for indecision solution

--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 
 <body>
 	<div class="navbar">
-		<a href="#index.html">Generator</a>
-		<a href="#create.html">Activity List</a>
+		<a href="index.html">Generator</a>
+		<a href="create.html">Activity List</a>
 	</div>
+        <h1 id="your-activity"></h1>
 		<form>
 			<button id="generate-decision" type="submit">Generate</button>
+            <section id="chosen-activities">
+
+            </section>
 		</form>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="./assets/script.js"></script>
+	<script src="./assets/generate-activities.js"></script>
 </body>
 
 </html>
