--- a/create.html
+++ b/create.html
@@ -9,17 +9,20 @@
 
 <body>
 	<div class="navbar">
-		<a href="#index.html">Generator</a>
-		<a href="#create.html">Activity List</a>
+		<a href="index.html">Generator</a>
+		<a href="create.html">Activity List</a>
 	</div>
 		<form>
 			<label for="activity-input">Activity</label>
 			<input id="activity-input" type="text" />
 			<button id="add-activity" type="submit">Add</button>
 		</form>
+        <section id="current-activities">
+
+        </section>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="./assets/script.js"></script>
+	<script src="./assets/manage-activites.js"></script>
 </body>
 
 </html>
