began adding basic styles to forms for desktop

--- a/create.html
+++ b/create.html
@@ -12,7 +12,8 @@
 		<a href="index.html">Generator</a>
 		<a href="create.html">Activity List</a>
 	</div>
-		<form>
+	<main>
+		<form id="activity-form">
 			<label for="activity-input">Activity</label>
 			<input id="activity-input" type="text" />
 			<button id="add-activity" type="submit">Add</button>
@@ -20,6 +21,7 @@
         <section id="current-activities">
 
         </section>
+	</main>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="./assets/manage-activites.js"></script>
