--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 		<a href="index.html">Generator</a>
 		<a href="create.html">Activity List</a>
 	</div>
+	<main>
         <h1 id="your-activity"></h1>
-		<form>
+		<form id="decision-form">
 			<button id="generate-decision" type="submit">Generate</button>
             <section id="chosen-activities">
 
             </section>
 		</form>
+	</main>
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="./assets/generate-activities.js"></script>
