created mobile responsiveness

--- a/create.html
+++ b/create.html
@@ -14,7 +14,7 @@
 	</div>
 	<main>
 		<form id="activity-form">
-			<label for="activity-input">Activity</label>
+			<label for="activity-input">Activity:</label>
 			<input id="activity-input" type="text" />
 			<button id="add-activity" type="submit">Add</button>
 		</form>
