--- a/create.html
+++ b/create.html
@@ -18,13 +18,19 @@
 			<input id="activity-input" type="text" />
 			<button id="add-activity" type="submit">Add</button>
 		</form>
-        <section id="current-activities">
+		<section id="current-activities">
 
-        </section>
+		</section>
 	</main>
+	<div id="modal" class="hide">
+		<div class="modal-content">
+			<button id="modal-btn">X</button>
+			<p id="modal-message"></p>
+		</div>
+	</div>
 
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="./assets/manage-activites.js"></script>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="./assets/manage-activites.js"></script>
 </body>
 
 </html>
