--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
 		<a href="create.html">Activity List</a>
 	</div>
 	<main>
-        <h1 id="your-activity"></h1>
+		<h1 id="your-activity"></h1>
 		<form id="decision-form">
 			<button id="generate-decision" type="submit">Generate</button>
-            <section id="chosen-activities">
+			<section id="chosen-activities">
 
-            </section>
+			</section>
 		</form>
 	</main>
-
+	<div id="modal" class="hide">
+		<div class="modal-content">
+			<button id="modal-btn">X</button>
+			<p id="modal-message"></p>
+		</div>
+	</div>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="./assets/generate-activities.js"></script>
 </body>
