seeing if multiple id is the issue

--- a/create.html
+++ b/create.html
@@ -22,12 +22,12 @@
 
 		</section>
 	</main>
-	<div id="modal" class="hide">
+	<!-- <div id="modal" class="hide">
 		<div class="modal-content">
 			<button id="modal-btn">X</button>
 			<p id="modal-message"></p>
 		</div>
-	</div>
+	</div> -->
 
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="./assets/manage-activites.js"></script>
