updating cdn to check functionatlity

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<p id="modal-message"></p>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script src="./assets/generate-activities.js"></script>
 </body>
 
